Bug 109143. Search datasource should return a valid result set from GetTargets now that we're suppressing re-entrant content builds. r=rjc, sr=hyatt